--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: linear-gradient(0deg,#525400, #ff35b5, #283d01);
+        background-image: linear-gradient(0deg,#540046, #ff35b5, #3d012c);
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
