--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       border-width: 5px;
       border-color: #000000;">
         <div class="card-body p-3 p-sm-4">
-          <!--img src="https://www.img.in.th/images/9f1a271b49ac8f7fed116aa1a0228d6b.jpg" class="img-fluid" style="width: 50%;"-->
+          <!--img src="https://cdn.discordapp.com/attachments/1032612964445999197/1032660279567331399/Untitled-5-01.jpg" class="img-fluid" style="width: 50%;"-->
           <!--ส่วนรูปโปรโมชั่น และ ลิ้งออกจากรูปภาพ-->
-          <img src="https://www.img.in.th/images/9f1a271b49ac8f7fed116aa1a0228d6b.jpg" class="img-fluid" style="width: 550px;
+          <img src="https://cdn.discordapp.com/attachments/1032612964445999197/1032660279567331399/Untitled-5-01.jpg" class="img-fluid" style="width: 550px;
           border-radius: 15px;
           box-shadow: 0 0 20px rgb(19, 19, 19);">
           
