--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         "contents": [
           {
             "type": "image",
-            "url": "https://www.img.in.th/images/9f1a271b49ac8f7fed116aa1a0228d6b.jpg",
+            "url": "https://cdn.discordapp.com/attachments/1032612964445999197/1032660279567331399/Untitled-5-01.jpg",
             "size": "full"
           }
         ],
